<resources>
    <string name="app_name">MoneyTracker</string>
    <string name="how_much_money_do_you_make_per_hour">How much money do you make per hour?</string>
    <string name="money">$$$</string>
    <string name="button">Button</string>
    <string name="title_activity_track_income">TrackIncome</string>
    <string name="pause">pause</string>
    <string name="end_workday">End Workday</string>
    <string name="hours_worked">Hours Worked</string>
    <string name="money_earned">Money Earned</string>
    <string name="resume">resume</string>
    <string name="title_activity_examine_earnings">ExamineEarnings</string>
    <string name="prev">Prev</string>
    <string name="next">next</string>
    <string name="settings">Settings</string>
    <string name="start_work">start work</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_edit_income_stats">EditIncomeStats</string>
    <string name="change_time_worked_money_earned">Change time worked / money earned</string>
    <string name="change_hourly_income">Change Hourly Income</string>
    <string name="title_activity_edit_stats">EditStatsActivity</string>
    <string name="title_activity_edit_time_money_for_day">EditTimeMoneyForDayActivity</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="time_worked">Time Worked</string>
    <string name="confirm">confirm</string>
    <string name="title_activity_deletethis">deletethis</string>
    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
</resources>
