<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
    <Button
            android:text="@string/change_hourly_income"
            android:layout_width="match_parent"
            android:layout_height="117dp" android:id="@+id/change_income"/>
    <Button
            android:text="@string/change_time_worked_money_earned"
            android:layout_width="match_parent"
            android:layout_height="117dp" android:id="@+id/change_time_money"/>

    <Button
            android:text="@string/back"
            android:layout_width="match_parent"
            android:layout_height="117dp"

            android:id="@+id/back"/>
</LinearLayout>
