<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_much_money_do_you_make_per_hour"
            android:layout_gravity="center_horizontal"
    />

    <android.support.design.widget.TextInputLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" tools:layout_editor_absoluteY="65dp"
            android:layout_marginTop="30dp"
            tools:layout_editor_absoluteX="0dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/incomeInput"
                android:hint="@string/money"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="@string/confirm"
            android:layout_width="370dp"
            android:backgroundTint="@color/colorPrimary"
            android:id="@+id/confirmButton"
            android:layout_height="94dp" android:layout_alignParentStart="true"
            android:layout_marginStart="0dp" android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true" android:layout_marginLeft="0dp"
            android:layout_marginBottom="0dp"/>


</RelativeLayout>